--- a/index.html
+++ b/index.html
@@ -1,4 +1,14 @@
 <!DOCTYPE html>
 <head>
   <title>Grass & Bark Bistro</title>
-    
+  <div>
+    <p style = "color:red;"> hello class!</p>
+    <p> how are you?</p>
+    <p>now</p>
+    <img src="./images/restaurant-05.jpg" width="300px" height="300px"/>
+  </div>
+  <a href="./about.html">About</a>
+  <a href="./menu.html">Menu</a>
+
+</body>
+</html>
