--- a/index.html
+++ b/index.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
-<head>
-  <title>Grass & Bark Bistro</title>
-  <div>
-    <p style = "color:red;"> hello class!</p>
-    <p> how are you?</p>
-    <p>now</p>
-    <img src="./images/restaurant-05.jpg" width="300px" height="300px"/>
-  </div>
-  <a href="./about.html">About</a>
-  <a href="./menu.html">Menu</a>
+<meta charset="utf-8" />
+ <title>Grass N' Bark Bistro</title>
+ <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="stylesheet" href="./css/my_style.css" />
+ <link rel="stylesheet" href="./css/my_styles.css" />
+ <script src="./js/my_javascript.js"></script>
+</head>
+
+
+   <p>now</p>
+   <img src="./images/restaurant-05.jpg" width="300px" height="300px"/>
+ </div>
+<a href="./about.html">About</a>
+ <a href="./menu.html">Menu</a>
 
 </body>
 </html>
