--- a/index.html
+++ b/index.html
@@ -1,18 +1,31 @@
 <!DOCTYPE html>
-<meta charset="utf-8" />
- <title>Grass N' Bark Bistro</title>
- <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="stylesheet" href="./css/my_style.css" />
- <link rel="stylesheet" href="./css/my_styles.css" />
- <script src="./js/my_javascript.js"></script>
+<head>
+
+  <title>The Grand Old Bistro</title>
+    <link rel="stylesheet" href="/Users/Mannino/Documents/assignment-5-restaurant/my_styles.css">
+  <style>
+  div.row {
+      background-color:lightblue;
+  }
+  </style>
 </head>
+<body>
+  </strong><h1 align="center">The Grand Old Bistro</h1></strong>
+    <center><img src ="/Users/Mannino/Documents/assignment-5-restaurant/Images/Donald-Trump-American-flag.jpg" alt="Trump Flag" width="1000px;" height="500px;"/></center>
+    <h2 align="center"><a href="about.html">About</h2></a>
+    <h2 align="center"><a href="menu.html">Menu</h2></a>
+    <div class="container-fluid">
+ <div class="row" style="border:1px red solid">
+      <h3 align="center">Welcome to The Grand Old Bistro!</h3>
 
+      <p align="center">Enjoy the culturally appropriated cuisines of American Politicians.</p>
+      <p align="center">Experience the best of populism, demagoguery, and the perpetaution of economic disparity all while stuffing your face with Trump steaks.</p>
+      <p align="center"><em>"America is a mistake, a giant mistake"</em> - Sigmund Freud</p>
+      <center><h3><u><strong>WE ONLY TAKE PORTIONS. NO CASH. NO HUMAN MONEY. NO REFUNDS.</strong></u></h3></center>
+        <center><h3><u><strong><em>WE WILL EAT YOUR SOUL IF YOU CAN'T PAY.</em></strong></u><h3></center>
 
-   <p>now</p>
-   <img src="./images/restaurant-05.jpg" width="300px" height="300px"/>
- </div>
-<a href="./about.html">About</a>
- <a href="./menu.html">Menu</a>
-
+</div>
+  </div>
+</div>
 </body>
 </html>
