--- a/menu.html
+++ b/menu.html
@@ -41,7 +41,7 @@
 <div class="menu">
           <strong><h2 align="center">Drinks</h2></strong>
                 <center><h3><em>Bottled Lead-Water</em> <strong><u>(3.5 Portions)</u></strong></h3></center>
-                <center><p><h4>Overpriced bottled tap water with <em>extra</em> lead to enhance nuerotoxicity and your loss of free will.</h4></p></center>
+                <center><p><h4>Overpriced bottled tap water with <em>extra</em> lead to enhance neurotoxicity and your loss of free will.</h4></p></center>
                 <center><h3><em>Fired Water</em> <strong><u>(7 Portions)</u></strong></h3></center>
                 <center><p><h4>Drown your sorrows in 190 proof grain alcohol.The more inebriated you are,the more appealing our food and the 2016 Presidential races seems!</h4></p></center>
         </div>
